// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot for danger 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
    role="alert"
  >
    <p
      class="mb-0 small"
    >
      Everything is broken
    </p>
    <p
      class="mb-0 small"
    >
      Run for your life!!!
    </p>
  </div>
</DocumentFragment>
`;

exports[`Matches snapshot for success 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success"
    role="alert"
  >
    <p
      class="mb-0 small"
    >
      Everything is awesome!
    </p>
  </div>
</DocumentFragment>
`;
